templates/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-app
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: frontend-app
